Fixes for Firefox 35

--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -22,6 +22,7 @@ timeline.panelLabel=Painel da linha do tempo
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=Performance Timeline
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
@@ -35,4 +36,6 @@ timeline.records=RECORDS
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Estilos
+timeline.label.reflow=Reflow
+timeline.label.paint=Paint
 timeline.label.domevent=Evento DOM
