--- a/pt-BR/browser/chrome/browser/devtools/webconsole.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webconsole.properties
@@ -26,6 +26,8 @@ tipMutation=Ativar ou desativa o registro de eventos DOM Mutation
 btnGlobal=Mensagens globais
 tipGlobal=Ativar ou desativar o registro de mensagens globais
 localConsole=Console local
+clearConsoleCmd.label=Clear Console
+clearConsoleCmd.accesskey=e
 close.button=Fechar
 close.accesskey=F
 update.button=Atualizar
