--- a/pt-BR/dom/chrome/layout/css.properties
+++ b/pt-BR/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Esperado identificador para extends system mas encontra
 PECounterASWeight=Cada peso no descritor additive-symbols deve ser menor que o peso anterior.
 PEClassSelEOF=nome da classe
 PEClassSelNotIdent=Esperado identificador para seletor de classe mas encontrado “%1$S”.
+PECoordinatePair=Expected coordinate pair but found '%1$S'.
 PETypeSelEOF=tipo do elemento
 PETypeSelNotType=Esperado nome do elemento ou “*” mas encontrado “%1$S”.
 PEUnknownNamespacePrefix=Prefixo de namespace desconhecido “%1$S”.
