--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -8,8 +8,12 @@ safeModeLabel=&Modo de segurança do %S
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
 setDefaultBrowserMessage2          = Consiga o máximo do %S definindo-o como seu navegador padrão
+setDefaultBrowserConfirm.label     = Use %S as my default browser
+setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = Opções
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Not now
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Não perguntar de novo
 setDefaultBrowserNever.accesskey   = N
 
