--- a/pt-BR/dom/chrome/security/security.properties
+++ b/pt-BR/dom/chrome/security/security.properties
@@ -16,3 +16,4 @@ InsecurePasswordsPresentOnIframe=Campos de senha presentes em um iframe inseguro
 LoadingMixedActiveContent=Carregando conteúdo ativo mesclado (inseguro) em uma página segura “%1$S”
 LoadingMixedDisplayContent=Carregando conteúdo de exibição mesclado (inseguro) em uma página segura “%1$S”
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and allow-same-origin for its sandbox attribute can remove its sandboxing.
