--- a/pt-BR/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/pt-BR/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -79,6 +79,7 @@ transferDiffUnits2=%1$S %2$S de %3$S %4$S
 # LOCALIZATION NOTE (transferNoTotal2):
 # %1$S progress number; %2$S unit
 # example: 111 KB
+transferNoTotal2=%1$S %2$S
 
 # LOCALIZATION NOTE (timePair2): %1$S time number; %2$S time unit
 # example: 1 minute; 11 hours
