There's no other thing called site in Albanian. So the translation of 'site web' forms do not need the 'web' part. Kind of redundancy. It took me ten years to realize it.

--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -280,7 +280,7 @@ newWindowButton.tooltip=Hapni një dritare të re (%S)
 newTabButton.tooltip=Hapni një skedë të re (%S)
 
 # Offline web applications
-offlineApps.available=Ky sajt web (%S) po kërkon të depozitojë të dhëna në kompjuterin tuaj për përdorim të palidhur.
+offlineApps.available=Ky sajt (%S) po kërkon të depozitojë të dhëna në kompjuterin tuaj për përdorim të palidhur.
 offlineApps.allow=Lejoje
 offlineApps.allowAccessKey=L
 offlineApps.never=Kurrë për Këtë Sajt
@@ -288,24 +288,24 @@ offlineApps.neverAccessKey=k
 offlineApps.notNow=Jo Tani
 offlineApps.notNowAccessKey=J
 
-offlineApps.usage=Ky sajt web (%S) po depoziton tani në kompjuterin tuaj më tepër se %SMB të dhëna për përdorim të palidhur.
+offlineApps.usage=Ky sajt (%S) po depoziton tani në kompjuterin tuaj më tepër se %SMB të dhëna për përdorim të palidhur.
 offlineApps.manageUsage=Shfaq rregullimet
 offlineApps.manageUsageAccessKey=S
 
 # LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
 # %2$S a number of megabytes.
-indexedDB.usage=Ky sajt web (%1$S) po përpiqet të depozitojë në kompjuterin tuaj më tepër se %2$S MB të dhëna për përdorim të palidhur.
+indexedDB.usage=Ky sajt (%1$S) po përpiqet të depozitojë në kompjuterin tuaj më tepër se %2$S MB të dhëna për përdorim të palidhur.
 
 identity.identified.verifier=Vërtetuar nga: %S
 identity.identified.verified_by_you=Keni shtuar përjashtim sigurie për këtë sajt
 identity.identified.state_and_country=%S, %S
 
-identity.encrypted2=Lidhja te ky sajt web është e sigurt.
-identity.mixed_display_loaded=Lidhja te ky sajt web nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar (fjala vjen, figura).
+identity.encrypted2=Lidhja te ky sajt është e sigurt.
+identity.mixed_display_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar (fjala vjen, figura).
 identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e shifruar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
-identity.unencrypted=Lidhja juaj te ky sajt web nuk është e shifruar.
+identity.unencrypted=Lidhja juaj te ky sajt nuk është e shifruar.
 
-identity.unknown.tooltip=Ky sajt web nuk furnizon të dhëna identiteti.
+identity.unknown.tooltip=Ky sajt nuk furnizon të dhëna identiteti.
 
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
