--- a/sq/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sq/browser/chrome/browser/devtools/gclicommands.properties
@@ -568,7 +568,7 @@ resizeModeDesc=Kontrolloni Mënyrën Dizajn Reagues
 # LOCALIZATION NOTE (resizeModeManual) A fuller description of the 'resize'
 # command, displayed when the user asks for help on what it does.
 # The argument (%1$S) is the browser name.
-resizeModeManual2=Sajtet web reagues reagojnë ndaj mjedisit, ndaj edhe janë të hijshëm si në një ekran celulari, ashtu edhe në një ekran kinemaje, apo në gjithçka tjetër të ndërmjetme. Mënyra Dizajn Reagues ju lejon të testoni lehtësisht në %1$S një larmi madhësish faqeje, pa u dashur të ripërmasohet krejt shfletuesi juaj.
+resizeModeManual2=Sajtet reagues reagojnë ndaj mjedisit, ndaj edhe janë të hijshëm si në një ekran celulari, ashtu edhe në një ekran kinemaje, apo në gjithçka tjetër të ndërmjetme. Mënyra Dizajn Reagues ju lejon të testoni lehtësisht në %1$S një larmi madhësish faqeje, pa u dashur të ripërmasohet krejt shfletuesi juaj.
 
 # LOCALIZATION NOTE (resizeModeToggleTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles Responsive Design Mode.
