--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -27,7 +27,7 @@ invitee_name_label=Kë po ftoni?
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=Ftesa do të skadojë për {{expiry_time}} ditë;Ftesa do të skadojë për {{expiry_time}} ditë
+invitee_expire_days_label=Ftesa do të skadojë pas {{expiry_time}} dite;Ftesa do të skadojë pas {{expiry_time}} ditësh
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -35,7 +35,7 @@ invitee_expire_days_label=Ftesa do të skadojë për {{expiry_time}} ditë;Ftesa
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=Ftesa do të skadojë për {{expiry_time}} orë;Ftesa do të skadojë për {{expiry_time}} orë
+invitee_expire_hours_label=Ftesa do të skadojë pas {{expiry_time}} ore;Ftesa do të skadojë pas {{expiry_time}} orësh
 
 # Status text
 display_name_guest=I ftuar
@@ -284,7 +284,7 @@ feedback_back_button=Mbrapsht
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-feedback_window_will_close_in2=Kjo dritare do të mbyllet për {{countdown}} sekondë;Kjo dritare do të mbyllet për {{countdown}} sekonda
+feedback_window_will_close_in2=Kjo dritare do të mbyllet pas {{countdown}} sekonde;Kjo dritare do të mbyllet pas {{countdown}} sekondash
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
