--- a/sq/browser/chrome/browser/pageInfo.properties
+++ b/sq/browser/chrome/browser/pageInfo.properties
@@ -44,13 +44,13 @@ mediaDimensionsScaled=%Spx \u00D7 %Spx (ripërmasuar në %Spx \u00D7 %Spx)
 mediaImageType=Figurë %S
 mediaUnknownNotCached=E panjohur (e paruajtur në fshehtinë)
 
-securityNoOwner=Ky sajt web nuk furnizon të dhëna pronësie.
+securityNoOwner=Ky sajt nuk furnizon të dhëna pronësie.
 
 # LOCALIZATION NOTE: The next string is for the disk usage of the
 # database
 #   e.g. indexedDBUsage : "50.23 MB"
 #   %1$S = size (in bytes or megabytes, ...)
 #   %2$S = unit of measure (bytes, KB, MB, ...)
-indexedDBUsage=Ky sajt web po përdor %1$S %2$S
+indexedDBUsage=Ky sajt po përdor %1$S %2$S
 
 permissions.useDefault=Përdor Parazgjedhjet
