--- a/sq/browser/chrome/overrides/appstrings.properties
+++ b/sq/browser/chrome/overrides/appstrings.properties
@@ -25,8 +25,8 @@ externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mba mend zgjedhjen time për tërë lidhjet e këtij lloji.
 externalProtocolLaunchBtn=Nisni zbatimin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar duke u bazuar në parapëlqimet tuaja të sigurisë.
-phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
-unsafeContentType=Faqja që po provoni të shihni nuk shfaqet dot, ngaqë është pjesë e një kartele të një lloji që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e sajtit web për t’u bërë të ditur këtë problem.
+phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
+unsafeContentType=Faqja që po provoni të shihni nuk shfaqet dot, ngaqë është pjesë e një kartele të një lloji që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e sajtit për t’u bërë të ditur këtë problem.
 contentEncodingError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë përdor një format të pavlefshëm ose një formë ngjeshjeje të pambuluar ende.
 resendButton.label=Ridërgoji
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don't translate "%S"
