--- a/sq/mobile/android/chrome/pippki.properties
+++ b/sq/mobile/android/chrome/pippki.properties
@@ -9,7 +9,7 @@ nssdialogs.cancel.label=Anuloje
 downloadCert.title=Po shkarkohet Dëshmia
 downloadCert.message1=Ju është kërkuar të besoni Autoritet i ri Dëshmish (AD).
 downloadCert.viewCert.label=Shfaqje
-downloadCert.trustSSL=Besoje për identifikim sajtesh web.
+downloadCert.trustSSL=Besoje për identifikim sajtesh.
 downloadCert.trustEmail=Besoje për identifikin përdoruesish email-i.
 downloadCert.trustObjSign=Besoje për identifikim zhvilluesish software-i.
 caCertExists.title=Dëshmia Ekziston
