--- a/sq/browser/chrome/browser/preferences/aboutPermissions.properties
+++ b/sq/browser/chrome/browser/preferences/aboutPermissions.properties
@@ -5,5 +5,5 @@
 # LOCALIZATION NOTE (visitCount): #1 is the number of history visits for a site
 visitCount=#1 vizitë;#1 vizita
 
-passwordsCount=Për këtë sajt web ka të ruajtur #1 fjalëkalim.;Për këtë sajt web ka të ruajtur #1 fjalëkalime.
-cookiesCount=Për këtë sajt web ka të depozituar #1 "cookie".;Për këtë sajt web ka të depozituara #1 "cookie".
+passwordsCount=Për këtë sajt ka të ruajtur #1 fjalëkalim.;Për këtë sajt ka të ruajtur #1 fjalëkalime.
+cookiesCount=Për këtë sajt ka të depozituar #1 "cookie".;Për këtë sajt ka të depozituara #1 "cookie".
