--- a/sq/dom/chrome/appstrings.properties
+++ b/sq/dom/chrome/appstrings.properties
@@ -19,7 +19,7 @@ isprinting=Dokumenti nuk ndryshohet dot brenda Shtypjes ose Paraparjes së Shtyp
 deniedPortAccess=Hyrja tek porta me numrin e dhënë është çaktivizuar për arsye sigurie.
 proxyResolveFailure=Shërbyesi ndërmjetës që keni formësuar nuk u gjet dot. Ju lutemi, kontrolloni rregullimet për ndërmjetësin dhe riprovoni.
 proxyConnectFailure=Nuk u pranua lidhja gjatë përpjekjes për t’u lidhur me shërbyesin ndërmjetës të formësuar prej jush. Ju lutemi, shihni rregullimet tuaj për ndërmjetësin dhe riprovoni.
-contentEncodingError=Faqja që po provoni të shihni nuk shfaqet dot, sepse përdor një formë ngjeshjeje të pavlefshme ose të pambuluar. Ju lutemi, lidhuni me të zotët e sajtit web për t’u bërë të ditur këtë problem.
+contentEncodingError=Faqja që po provoni të shihni nuk shfaqet dot, sepse përdor një formë ngjeshjeje të pavlefshme ose të pambuluar. Ju lutemi, lidhuni me të zotët e sajtit për t’u bërë të ditur këtë problem.
 externalProtocolTitle=Kërkesë Protokolli të Jashtëm
 externalProtocolPrompt=Duhet vënë në veprim një zbatim i jashtëm për të trajtuar lidhje %1$S: .\n\n\nLidhje e nevojshme:\n\n%2$S\n\nZbatim: %3$S\n\n\nNëse nuk e prisnit këtë kërkesë, mundet të jetë një përpjekje për shfrytëzimin e ndonjë dobësie në atë programin tjetër. Anulojeni këtë kërkesë nëse nuk jeni i sigurt që nuk është keqdashëse.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
@@ -27,8 +27,8 @@ externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mba mend zgjedhjen time për tërë lidhjet e këtij lloji.
 externalProtocolLaunchBtn=Nisni zbatimin
 malwareBlocked=Sajti te %S është raportuar si një sajt sulmesh dhe është bllokuar duke u bazuar në parapëlqimet tuaja të sigurisë.
-phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
-unsafeContentType=Faqja që po përpiqeni të shihni nuk shfaqet dot, ngaqë gjendet brenda një lloji kartelash hapja e të cilave mund të mos jetë e sigurt. Ju lutemi, lidhuni me të zotët e sajtit web për t’u bërë të ditur këtë problem.
+phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
+unsafeContentType=Faqja që po përpiqeni të shihni nuk shfaqet dot, ngaqë gjendet brenda një lloji kartelash hapja e të cilave mund të mos jetë e sigurt. Ju lutemi, lidhuni me të zotët e sajtit për t’u bërë të ditur këtë problem.
 cspFrameAncestorBlocked=Kjo faqe përmban një rregull sigurie lënde që pengon trupëzimin e saj në këtë mënyrë.
 corruptedContentError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë u kap një gabim në transmetimin e të dhënave.
 remoteXUL=Kjo faqe përdor një teknologji të pambuluar që nuk është më pjesë si parazgjedhje.
