--- a/sq/mobile/overrides/appstrings.properties
+++ b/sq/mobile/overrides/appstrings.properties
@@ -21,7 +21,7 @@ deniedPortAccess=Kjo adresë përdor një portë rrjeti e cila, zakonisht, përd
 proxyResolveFailure=Firefox-i është formësuar të përdorë një shërbyes ndërmjetës që nuk gjendet dot.
 proxyConnectFailure=Firefox-i është formësuar të përdorë një shërbyes ndërmjetës i cili nuk po pranon lidhje.
 contentEncodingError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë përdor një format të pavlefshëm ose një formë ngjeshjeje të pambuluar ende.
-unsafeContentType=Faqja që po provoni të shihni nuk shfaqet dot, ngaqë është pjesë e një kartele të një lloji që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e sajtit web për t’u bërë të ditur këtë problem.
+unsafeContentType=Faqja që po provoni të shihni nuk shfaqet dot, ngaqë është pjesë e një kartele të një lloji që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e sajtit për t’u bërë të ditur këtë problem.
 externalProtocolTitle=Kërkesë prej Protokolli të Jashtëm
 externalProtocolPrompt=Duhet vënë në veprim një zbatim i jashtëm për të trajtuar lidhje %1$S:. Lidhje e nevojshme:\n\n\n%2$S\nZbatim: %3$S\n\n\nNëse nuk e prisnit këtë kërkesë, mundet të jetë një përpjekje për shfrytëzimin e ndonjë dobësie në atë programin tjetër. Anulojeni këtë kërkesë, nëse nuk jeni i sigurt që nuk është keqdashëse.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
@@ -29,7 +29,7 @@ externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mba mend zgjedhjen time për tërë lidhjet e këtij lloji.
 externalProtocolLaunchBtn=Nise zbatimin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar duke u bazuar në parapëlqimet tuaja të sigurisë.
-phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
+phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
 cspFrameAncestorBlocked=Për këtë faqe ka një rregull sigurie lënde që e pengon të trupëzohet në këtë mënyrë.
 resendButton.label=Ridërgoje
 corruptedContentError=Faqja që po përpiqeni të shihni nuk mund të shfaqet, ngaqë u kap një gabim në transmetimin e të dhënave.
