--- a/sq/webapprt/webapprt/overrides/appstrings.properties
+++ b/sq/webapprt/webapprt/overrides/appstrings.properties
@@ -29,7 +29,7 @@ externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mbaje mend zgjedhjen time për krejt lidhjet e këtij lloji.
 externalProtocolLaunchBtn=Nise zbatimin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar, bazuar te parapëlqimet tuaja mbi sigurinë.
-phishingBlocked=Sajti web te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
+phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
 cspFrameAncestorBlocked=Ky zbatim u përpoq të hynte në një burim i cili përmban një rregull sigurie lënde që e pengon trupëzimin e saj në këtë mënyrë.
 corruptedContentError=Zbatimi nuk vazhdon dot ngarkimin, ngaqë u kap një gabim në transmetimin e të dhënave.
 remoteXUL=Ky zbatim u përpoq të përdorë një teknologji të pambuluar që nuk është më e passhme.
