Clearing ' web' redundancy for beta

--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -84,7 +84,7 @@ feed-button.tooltiptext2 = Pajtohuni te kjo faqe
 # LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
-characterencoding-button.label = \u00adKodim Shkronjash
+# characterencoding-button.label = \u00adKodim Shkronjash
 characterencoding-button.tooltiptext2 = Shfaqni mundësi rreth Kodimit të Shkronjave
 
 email-link-button.label = Dërgojeni Lidhjen me Email
@@ -97,19 +97,8 @@ quit-button.tooltiptext.linux2 = Dilni nga %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Dilni nga %1$S (%2$S)
 
-loop-call-button2.label = Nisni një bashkëbisedim
-loop-call-button2.tooltiptext = Nisni një bashkëbisedim
-
-social-share-button.label = Ndajeni Këtë Faqe Me të Tjerët
-social-share-button.tooltiptext = Ndajeni Këtë Faqe Me të Tjerët
-
 panic-button.label = Harroje
 panic-button.tooltiptext = Harro historikun e shfletimit
 
-web-apps-button.label = Zbatime
-web-apps-button.tooltiptext = Zbuloni Zbatime
-
-# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
-# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = WebIDE e Hapur
+loop-call-button.label = Ftojeni dikë për bisedë
+loop-call-button.tooltiptext = Ftoni dikë për bisedë
