--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -4,17 +4,7 @@
 
 # Panel Strings
 
-## LOCALIZATION NOTE(clientShortname2): This should not be localized and
-## should remain "Firefox Hello" for all locales.
-clientShortname2=Firefox Hello
-
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Merrni pjesë në bashkëbisedim
-first_time_experience_button_label=Fillojani
-
 share_link_header_text=Ndajeni këtë lidhje me dikë për ta ftuar të bisedoni:
-invite_header_text=Ftoni dikë të bisedojë me ju.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -27,7 +17,7 @@ invitee_name_label=Kë po ftoni?
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=Ftesa do të skadojë për {{expiry_time}} ditë;Ftesa do të skadojë për {{expiry_time}} ditë
+invitee_expire_days_label=Ftesa do të skadojë pas {{expiry_time}} dite;Ftesa do të skadojë pas {{expiry_time}} ditësh
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -35,7 +25,7 @@ invitee_expire_days_label=Ftesa do të skadojë për {{expiry_time}} ditë;Ftesa
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=Ftesa do të skadojë për {{expiry_time}} orë;Ftesa do të skadojë për {{expiry_time}} orë
+invitee_expire_hours_label=Ftesa do të skadojë pas {{expiry_time}} ore;Ftesa do të skadojë pas {{expiry_time}} orësh
 
 # Status text
 display_name_guest=I ftuar
@@ -62,14 +52,12 @@ problem_accessing_account=Pati Një Problem Me Hyrjen Në Llogarinë Tuaj
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Riprovoni
 
-share_email_subject4={{clientShortname}} — Merrni pjesë në bashkëbisedim
-## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
+share_email_subject3=Jeni ftuar në një bashkëbisedim
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Tungjatjeta!\r\n\r\nEjani për një bashkëbisedim me video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nBisedojmë së shpejti!
+share_email_body3=Që ta pranoni këtë ftesë, thjesht kopjoni ose klikoni mbi këtë lidhje që të filloni bashkëbisedimin:\r\n\r\n{{callUrl}}
 share_button=Email
-share_button2=Lidhje Email
 copy_url_button=Kopjoje
-copy_url_button2=Kopjoje Lidhjen
 copied_url_button=U kopjua!
 
 panel_footer_signin_or_signup_link=Hyni ose Regjistrohuni
@@ -97,10 +85,6 @@ new_contact_button=Kontakt i Ri
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Emër
 new_contact_email_placeholder=Email
-new_contact_phone_placeholder=Telefon Me Firefox OS
-
-contacts_blocked_contacts=Kontakte të Bllokuar
-
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -190,7 +174,6 @@ initiate_call_button_label2=Gati për të filluar bashkëbisedimin?
 incoming_call_title2=Kërkesë Bashkëbisedimi
 incoming_call_accept_button=Pranoje
 incoming_call_accept_audio_only_tooltip=Pranoje me zë
-incoming_call_accept_audio_video_tooltip=Pranoje me video
 incoming_call_cancel_button=Anuloje
 incoming_call_cancel_and_block_button=Anuloje dhe Bllokoje
 incoming_call_block_button=Bllokoje
@@ -200,7 +183,6 @@ mute_local_audio_button_title=Mbylljani zërin
 unmute_local_audio_button_title=Hapjani zërin
 mute_local_video_button_title=Mbylljani videon
 unmute_local_video_button_title=Hapjani videon
-
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
@@ -215,7 +197,6 @@ initiate_audio_video_call_button2=Filloje
 initiate_audio_video_call_tooltip2=Filloni një bashkëbisedim me video
 initiate_audio_call_button2=Bashkëbisedim me zë
 initiate_call_cancel_button=Anuloje
-
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
@@ -257,17 +238,12 @@ connection_error_see_console_notification=Thirrja dështoi; për hollësi, shihn
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name.
+## by the brand name, or fall back to client_shortname_fallback
 legal_text_and_links3=Duke përdorur {{clientShortname}} pajtoheni me {{terms_of_use}} \
   dhe {{privacy_notice}}.
 legal_text_tos = Kushtet e Përdorimit
 legal_text_privacy = Shënimet Mbi Privatësinë
-
-## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
-## These 2 strings are displayed before and after a 'Telefonica'
-## logo.
-powered_by_beforeLogo=Realizuar nga
-powered_by_afterLogo=
+client_shortname_fallback=këtë produkt
 
 feedback_call_experience_heading2=Si rrodhi bashkëbisedimi juaj?
 feedback_what_makes_you_sad=Ç’ju trishton?
@@ -284,7 +260,7 @@ feedback_back_button=Mbrapsht
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-feedback_window_will_close_in2=Kjo dritare do të mbyllet për {{countdown}} sekondë;Kjo dritare do të mbyllet për {{countdown}} sekonda
+feedback_window_will_close_in2=Kjo dritare do të mbyllet pas {{countdown}} sekonde;Kjo dritare do të mbyllet pas {{countdown}} sekondash
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
@@ -293,29 +269,3 @@ feedback_rejoin_button=Rifutuni
 ## an abusive user.
 feedback_report_user_button=Raportoni Përdorues
 
-help_label=Ndihmë
-tour_label=Tur
-
-## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
-## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
-rooms_default_room_name_template=Bashkëbisedimi {{conversationLabel}}
-rooms_leave_button_label=Braktiseni
-rooms_list_copy_url_tooltip=Kopjoni Lidhjen
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Bashkëbisedimi i tanishëm;Bashkëbisedime të tanishme
-rooms_list_delete_tooltip=Fshijeni bashkëbisedimin
-rooms_list_deleteConfirmation_label=Jeni i sigurt?
-rooms_list_no_current_conversations=Pa bashkëbisedimi të tanishme
-rooms_name_this_room_label=Emërtojeni këtë bashkëbisedim
-rooms_new_room_button_label=Filloni një bashkëbisedim
-rooms_only_occupant_label=Jeni i pari këtu.
-rooms_panel_title=Zgjidhni një bashkëbisedim ose nisni një të ri
-rooms_room_full_label=Ka tashmë dy vetë në këtë bashkëbisedim.
-rooms_room_full_call_to_action_nonFx_label=Shkarkoni {{brandShortname}}-in që të filloni të tuajin
-rooms_room_full_call_to_action_label=Mësoni më tepër mbi {{clientShortname}}-in »
-rooms_room_joined_label=Dikush erdhi për bashkëbisedim!
-rooms_room_join_label=Hyni në bashkëbisedim
