--- a/sq/browser/chrome/browser/places/places.properties
+++ b/sq/browser/chrome/browser/places/places.properties
@@ -2,23 +2,41 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+# LOCALIZATION NOTE (tagResultLabel) :
+# This is what we use to form the label (for screen readers)
+# for url bar autocomplete results of type "tag"
+# See createResultLabel() in urlbarBindings.xml 
+tagResultLabel=Etiketë
+recentlyBookmarkedTitle=Faqeruajtur së Fundmi
+recentTagsTitle=Etiketa së Fundmi
+
+OrganizerQueryAllBookmarks=Tërë Faqerojtësit
+OrganizerQueryDownloads=Shkarkime
+OrganizerQueryHistory=Historik  
+OrganizerQueryTags=Etiketa
+# LOCALIZATION NOTE (bookmarkResultLabel) :
+# This is what we use to form the label (for screen readers)
+# for url bar autocomplete results of type "bookmark"
+# See createResultLabel() in urlbarBindings.xml 
+bookmarkResultLabel=Faqerojtës
+mostVisitedTitle=Më të Vizituarit
+
 load-js-data-url-error=Për arsye sigurie, javascript apo url-ë të dhënash nuk mund të ngarkohen prej dritares apo anështyllës së historikut.
 noTitle=(pa titull)
 
+
 bookmarksMenuEmptyFolder=(E zbrazët)
 
+# LOCALIZATION NOTE (bookmarksBackupFilename) :
+# %S will be replaced by the current date in ISO 8601 format, YYYY-MM-DD.
+# The resulting string will be suggested as a filename, so make sure that you're
+# only using characters legal for file names. Consider falling back to the
+# en-US value if you have to use non-ascii characters.
 bookmarksBackupTitle=Emër kartele kopjeruajtjeje faqerojtësish
 
 bookmarksRestoreAlertTitle=Riktheni Faqerojtësit
 bookmarksRestoreAlert=Në këtë mënyrë do të zëvendësohen tërë faqerojtësit tuaj të tanishëm me ata të kopjeruajtjes. Jeni i sigurt?
 bookmarksRestoreTitle=Përzgjidhni një kopjeruajtje faqerojtësish
-bookmarksRestoreFilterName=JSON
-
-bookmarksRestoreFormatError=Lloj kartele i pambuluar.
-bookmarksRestoreParseError=I pazoti të përpunojë kartelë kopjeruajtjeje.
-
-bookmarksLivemarkLoading=Po ngarkohet Faqerojtës i Gjallë…
-bookmarksLivemarkFailed=Ngarkimi i prurjes Faqerojtës i Gjallë dështoi.
 
 menuOpenLivemarkOrigin.label=Hap "%S"
 
@@ -60,32 +78,21 @@ SelectImport=Importoni Kartelë Faqerojtësish
 EnterExport=Eksportoni Kartelë Faqerojtësish
 
 detailsPane.noItems=Pa objekte
-# LOCALIZATION NOTE (detailsPane.itemsCountLabel): Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (detailsPane.itemsCountLabel): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of items
 # example: 111 items
 detailsPane.itemsCountLabel=Një objekt;#1 objekte
 
-mostVisitedTitle=Më të Vizituarit
-recentlyBookmarkedTitle=Faqeruajtur së Fundmi
-recentTagsTitle=Etiketa së Fundmi
+searchBookmarks=Kërko në Faqerojtës
 
-OrganizerQueryAllBookmarks=Tërë Faqerojtësit
-OrganizerQueryDownloads=Shkarkime
-OrganizerQueryHistory=Historik  
-OrganizerQueryTags=Etiketa
+bookmarksLivemarkLoading=Po ngarkohet Faqerojtës i Gjallë…
+bookmarksLivemarkFailed=Ngarkimi i prurjes Faqerojtës i Gjallë dështoi.
 
-# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
-# keywordResultLabel, searchengineResultLabel)
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
-tagResultLabel=Etiketë
-bookmarkResultLabel=Faqerojtës
-switchtabResultLabel=Etiketë
-keywordResultLabel=Fjalëkyç
-searchengineResultLabel=Kërkim
-
+bookmarksRestoreFilterName=JSON
+bookmarksRestoreFormatError=Lloj kartele i pambuluar.
+bookmarksRestoreParseError=I pazoti të përpunojë kartelë kopjeruajtjeje.
+searchHistory=Kërkoni në Historik
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
