--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -23,7 +23,7 @@ alertDownloadsToast=Filloi shkarkimi…
 alertDownloadsPause=Pushim
 alertDownloadsResume=Rimerre
 alertDownloadsCancel=Anuloje
-
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
 # when the user tries to download something in Guest mode.
 downloads.disabledInGuest=Në sesione mysafiri shkarkimet janë të çaktivizuara
 
@@ -214,8 +214,8 @@ selectionHelper.textCopied=Teksti u kopjua në të papastër
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
 casting.sendToDevice=Dërgoje në Pajisje
-# casting.mirrorTab=Mirror Tab
-# casting.mirrorTabStop=Stop Mirror
+#casting.mirrorTab=Mirror Tab
+#casting.mirrorTabStop=Stop Mirror
 
 # Context menu
 contextmenu.openInNewTab=Hapeni Lidhjen Në Skedë të Re
@@ -236,7 +236,7 @@ contextmenu.shareImage=Ndajeni Figurën Me të Tjerët
 # LOCALIZATION NOTE (contextmenu.search):
 # The label of the contextmenu item which allows you to search with your default search engine for
 # the text you have selected. %S is the name of the search engine. For example, "Google".
-contextmenu.search=Kërkim m e%S
+contextmenu.search=Kërkim me %S
 contextmenu.saveImage=Ruajeni Figurën
 contextmenu.setImageAs=Vendoseni Figurën Si
 contextmenu.addSearchEngine2=Shtoni Motor Kërkimesh
@@ -249,7 +249,7 @@ contextmenu.unmute=Me zë
 contextmenu.saveVideo=Ruajeni Videon
 contextmenu.saveAudio=Ruajeni Audion
 contextmenu.addToContacts=Shtojeni te Kontaktet
-#contextmenu.castToScreen=Cast to Screen
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
 # The label that will be used in the contextmenu and the pageaction
 contextmenu.sendToDevice=Dërgojeni në Pajisje
 
@@ -322,10 +322,6 @@ remoteNotificationGenericName=Zbatim
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Po dëgjohet tek porta %S
-# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
-remoteStartNotificationTitle=Aktivizoni diagnostikimin për %S
-# LOCALIZATION NOTE (remoteStartNotificationMessage):
-remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i largët debugger
 
 # Helper apps
 helperapps.open=Hape
