--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -103,6 +103,13 @@ popupShowPopupPrefix=Shfaq '%S'
 badContentBlocked.blocked.message=%S-i po bllokon lëndë në këtë faqe.
 badContentBlocked.notblocked.message=%S-i nuk po bllokon ndonjë lëndë në këtë faqe.
 
+# missing plugin installer
+installPlugin.message = Do të donit të instalohet shtojca e domosdoshme për shfaqjen e medias në këtë faqe?
+installPlugin.button.label=Instaloje %S
+installPlugin.button.accesskey=I
+installPlugin.ignoreButton.label=Mos më pyet sërish
+installPlugin.ignoreButton.accesskey=M
+
 crashedpluginsMessage.title=Shtojca %S u vithis.
 crashedpluginsMessage.reloadButton.label=Ringarkoje faqen
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -280,7 +287,7 @@ newWindowButton.tooltip=Hapni një dritare të re (%S)
 newTabButton.tooltip=Hapni një skedë të re (%S)
 
 # Offline web applications
-offlineApps.available=Ky sajt web (%S) po kërkon të depozitojë të dhëna në kompjuterin tuaj për përdorim të palidhur.
+offlineApps.available=Ky sajt (%S) po kërkon të depozitojë të dhëna në kompjuterin tuaj për përdorim të palidhur.
 offlineApps.allow=Lejoje
 offlineApps.allowAccessKey=L
 offlineApps.never=Kurrë për Këtë Sajt
@@ -288,24 +295,24 @@ offlineApps.neverAccessKey=k
 offlineApps.notNow=Jo Tani
 offlineApps.notNowAccessKey=J
 
-offlineApps.usage=Ky sajt web (%S) po depoziton tani në kompjuterin tuaj më tepër se %SMB të dhëna për përdorim të palidhur.
+offlineApps.usage=Ky sajt (%S) po depoziton tani në kompjuterin tuaj më tepër se %SMB të dhëna për përdorim të palidhur.
 offlineApps.manageUsage=Shfaq rregullimet
 offlineApps.manageUsageAccessKey=S
 
 # LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
 # %2$S a number of megabytes.
-indexedDB.usage=Ky sajt web (%1$S) po përpiqet të depozitojë në kompjuterin tuaj më tepër se %2$S MB të dhëna për përdorim të palidhur.
+indexedDB.usage=Ky sajt (%1$S) po përpiqet të depozitojë në kompjuterin tuaj më tepër se %2$S MB të dhëna për përdorim të palidhur.
 
 identity.identified.verifier=Vërtetuar nga: %S
 identity.identified.verified_by_you=Keni shtuar përjashtim sigurie për këtë sajt
 identity.identified.state_and_country=%S, %S
 
-identity.encrypted2=Lidhja te ky sajt web është e sigurt.
-identity.mixed_display_loaded=Lidhja te ky sajt web nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar (fjala vjen, figura).
+identity.encrypted2=Lidhja te ky sajt është e sigurt.
+identity.mixed_display_loaded=Lidhja te ky sajt nuk është plotësisht e sigurt, ngaqë përmban elementë të pashifruar (fjala vjen, figura).
 identity.mixed_active_loaded2=Ky sajt përmban lëndë ndërvepruese që nuk është e shifruar (fjala vjen, programthe). Të tjerët mund të shohin të dhëna tuajat ose të modifikojnë sjelljen e sajtit.
-identity.unencrypted=Lidhja juaj te ky sajt web nuk është e shifruar.
+identity.unencrypted=Lidhja juaj te ky sajt nuk është e shifruar.
 
-identity.unknown.tooltip=Ky sajt web nuk furnizon të dhëna identiteti.
+identity.unknown.tooltip=Ky sajt nuk furnizon të dhëna identiteti.
 
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
@@ -567,18 +574,13 @@ getUserMedia.stopSharing.accesskey = N
 
 getUserMedia.sharingMenu.label = Skeda që ndajnë pajisje
 getUserMedia.sharingMenu.accesskey = P
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
-#                    getUserMedia.sharingMenuMicrophone,
-#                    getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen,
-#                    getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
-#                    getUserMedia.sharingMenuCameraApplication,
-#                    getUserMedia.sharingMenuCameraScreen,
-#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -592,16 +594,12 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe zbatim)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
-getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe zbatim)
-getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
-getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe zbatim)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dhe ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dhe dritare)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Origjinë e panjohur
-
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S-i duket se po vonon… të… niset.
@@ -616,12 +614,3 @@ slowStartup.disableNotificationButton.accesskey = o
 customizeTips.tip0 = %1$S: %2$S-in mund ta përshtatni të punojë sipas mënyrës që doni. Thjesht tërhiqni këdo nga sa më sipër te menuja ose paneli. %3$S rreth personalizimit të %2$S-it.
 customizeTips.tip0.hint = Ndihmëz
 customizeTips.tip0.learnMore = Mësoni më tepër
-
-# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
-# the appmenu labels and buttons that appear when an update is staged for
-# installation or a background update has failed and a manual download is required.
-# %S is brandShortName
-appmenu.restartNeeded.description = Riniseni %S-in që të zbatohen përditësimet
-appmenu.updateFailed.description = Përditësimi në prapaskenë dështoi, ju lutemi, shkarkoni përditësimin
-appmenu.restartBrowserButton.label = Rinisni %S-in
-appmenu.downloadUpdateButton.label = Download Update
