--- a/sq/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sq/browser/chrome/browser/devtools/scratchpad.properties
@@ -83,17 +83,6 @@ scratchpad.label=Fletë e Papastër
 # window.
 scratchpad.tooltip=Fletë e Papastër
 
-# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
-# a new user of the developer tools pastes code into the console
-# %1 is the text of selfxss.okstring
-selfxss.msg=Sinjalizim Mashtrimi: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorëve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë që të lejoni ngjitjen.
-
-Sinjalizim Mashtrimi: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorëve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë që të lejoni ngjitjen.
-
-
-
-
-
 # LOCALIZATION NOTE (propertiesFilterPlaceholder): this is the text that
 # appears in the filter text box for the properties view container.
 propertiesFilterPlaceholder=Filtroni veti
@@ -107,19 +96,10 @@ scratchpad.panelLabel=Panel Flete të Papastër
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
-#selfxss.msg=Sinjalizim Mashtrimi: Bëni kujdes kur ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë sulmuesve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' te fleta e papastër më poshtë që të lejoni ngjitjen.
+selfxss.msg=Sinjalizim Mashtrimi: Bëni kujdes kur ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorëve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë (nuk ka nevojë për shtypjen e tastit Enter) që të lejoni ngjitjen.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
 # Please avoid using non-keyboard characters here
 selfxss.okstring=lejoje ngjitjen
-
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
-importFromFile.convert.failed=Dështoi shndërrimi i kartelës nga %1$S në Unikod.
-
-# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
-# information displayed in statusbar when selection is made in
-# Scratchpad.
-scratchpad.statusBarLineCol  = Rreshti %1$S, Shtylla %2$S
 
