--- a/sq/browser/chrome/browser/pageInfo.properties
+++ b/sq/browser/chrome/browser/pageInfo.properties
@@ -2,55 +2,56 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+pageInfo.page.title=Të dhëna Faqeje - %S
+pageInfo.frame.title=Të dhëna Kornize - %S
+
+noPageTitle=Faqe e Patitull
+pageTitle=%S:
+unknown=E panjohur
+notset=E pacaktuar
+yes=Po
+no=Jo
+
+mediaImg=Figura
+mediaVideo=Video
+mediaAudio=Audio
+mediaBGImg=Sfond
+mediaBorderImg=Anë
+mediaListImg=Me pika
+mediaCursor=Kursor
+mediaObject=Objekt
+mediaEmbed=Trupëzo
+mediaLink=Ikonë
+mediaInput=Futje
+mediaFileSize=%S KB
+mediaSize=%Spx \u00D7 %Spx
+mediaSelectFolder=Përzgjidhni një Dosje Ku të Ruhen Figurat
+mediaBlockImage=Bllokoji Figurat prej %S
+mediaUnknownNotCached=E panjohur (e paruajtur në fshehtinë)
+mediaImageType=Figurë %S
+mediaAnimatedImageType=Figurë %S (e animuar, %S korniza)
+mediaDimensions=%Spx \u00D7 %Spx
+mediaDimensionsScaled=%Spx \u00D7 %Spx (ripërmasuar në %Spx \u00D7 %Spx)
+
+generalQuirksMode=Mënyrë Quirks
+generalStrictMode=Mënyrë përputhje me standardet
+generalSize=%S KB (%S bajt)
+generalMetaTag=Meta (1 etiketë)
+generalMetaTags=Meta (%S etiketa)
+
 feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-generalMetaTag=Meta (1 etiketë)
-generalMetaTags=Meta (%S etiketa)
-mediaBlockImage=Bllokoji Figurat prej %S
-mediaSelectFolder=Përzgjidhni një Dosje në të cilën të Ruhen Figurat
-mediaFileSize=%S KB
-no=Jo
-yes=Po
-pageInfo.frame.title=Të dhëna Kornize - %S
-pageInfo.page.title=Të dhëna Faqeje - %S
-
+securityNoOwner=Ky sajt nuk furnizon të dhëna pronësie.
 securityOneVisit=Po, një herë
 securityNVisits=Po, %S herë
-
-pageTitle=%S:
-unknown=E panjohur
-mediaLink=Ikonë
-mediaSize=Gjerësi: %Spx, Lartësi: %Spx
-mediaEmbed=Trupëzo
-mediaImg=Figura
-mediaVideo=Video
-mediaAudio=Audio
-notset=Nuk dihet
-generalQuirksMode=Quirks mode
-noPageTitle=Faqe e Patitull
-generalSize=%S KB (%S bajt)
-mediaInput=Futje
-mediaBGImg=Sfond
-generalStrictMode=Mënyrë përputhje me standardet
-mediaObject=Objekt
-mediaBorderImg=Anë
-mediaListImg=Me pika
-mediaCursor=Kursor
-mediaAnimatedImageType=Figurë %S (e animuar, %S korniza)
-mediaDimensions=%Spx \u00D7 %Spx
-mediaDimensionsScaled=%Spx \u00D7 %Spx (ripërmasuar në %Spx \u00D7 %Spx)
-mediaImageType=Figurë %S
-mediaUnknownNotCached=E panjohur (e paruajtur në fshehtinë)
-
-securityNoOwner=Ky sajt web nuk furnizon të dhëna pronësie.
 
 # LOCALIZATION NOTE: The next string is for the disk usage of the
 # database
 #   e.g. indexedDBUsage : "50.23 MB"
 #   %1$S = size (in bytes or megabytes, ...)
 #   %2$S = unit of measure (bytes, KB, MB, ...)
-indexedDBUsage=Ky sajt web po përdor %1$S %2$S
+indexedDBUsage=Ky sajt po përdor %1$S %2$S
 
 permissions.useDefault=Përdor Parazgjedhjet
