--- a/sq/security/manager/chrome/pippki/pippki.properties
+++ b/sq/security/manager/chrome/pippki/pippki.properties
@@ -28,7 +28,7 @@ incorrect_pw=Nuk dhatë Fjalëkalimin e tanishëm të saktë të Përgjithshëm.
 chooseP12RestoreFileDialog2=Kartelë Dëshmie Për Importim
 file_browse_PKCS12_spec=Kartela PKCS12
 devinfo_desc=Përshkrim
-pageInfo_SiteNotVerified=Sajt Web Jo i Verifikuar
+pageInfo_SiteNotVerified=Sajt Jo i Verifikuar
 pw_erased_ok=Kujdes! Keni fshirë Fjalëkalimin tuaj të Përgjithshëm.
 failed_pw_change=Nuk arrin të ndryshojë Fjalëkalimin e Përgjithshëm.
 certNotVerified_Unknown=Për arsye të panjohura, s’verifikoi dot këtë dëshmi.
@@ -43,12 +43,12 @@ newCAMessage1=Doni të besohet "%S" për qëllimet vijues?
 pw_change2empty_in_fips_mode=Hëpërhë gjendeni nën mënyrën FIPS. FIPS kërkon një Fjalëkalim të Përgjithshëm jo e zbrazët.
 devinfo_modpath=Shteg
 enable_fips=Aktivizo FIPS
-pageInfo_ViewCertificate=Shihni dëshminë e sigurisë që vërteton identitetin e këtij sajti web.
+pageInfo_ViewCertificate=Shihni dëshminë e sigurisë që vërteton identitetin e këtij sajti.
 pw_empty_warning=Fjalëkalimet tuaj të ruajtur për email dhe web, të dhëna formularësh, dhe kyçe privatë nuk do të jenë të mbrojtur.
 pw_change_ok=Fjalëkalim i Përgjithshëm i ndryshuar me sukses.
 certNotVerified_IssuerNotTrusted=S’verifikoi dot këtë dëshmi, sepse nuk është besuar lëshuesi. 
 unnamedCA=Autoritet Dëshmish (pa emër)
-pageInfo_WebSiteVerified=Identitet Sajti Web i Verifikuar
+pageInfo_WebSiteVerified=Identitet Sajti i Verifikuar
 devinfo_modname=Modul
 issuerNotKnown=Ngaqë nuk njihni autoritetin e dëshmive që ka lëshuar këtë dëshmi, nuk e besoni mirëfilltësinë e kësaj dëshmie, veç në u tregoftë ndryshe këtu.
 
@@ -62,7 +62,7 @@ pageInfo_Privacy_None2=Të dhëna të dërguara përmes Internetit të pashifrua
 disable_fips=Çaktivizo FIPS
 certNotVerified_CertRevoked=S’verifikoi dot këtë dëshmi, sepse është shfuqizuar.
 CertPassPrompt=Ju lutemi, jepni Fjalëkalimin Vetjak të Sigurisë për Kyçet Private PSM të pajisjeve të sigurisë.
-pageInfo_Privacy_None1=Sajti web %S nuk mbulon shifrim për faqen që po shihni.
+pageInfo_Privacy_None1=Sajti %S nuk mbulon shifrim për faqen që po shihni.
 deleteUserCertTitle=Fshini Dëshmitë tuaja
 editTrustEmail=Dëshmia "%S" është lëshuar nga:
 certNotVerified_CertExpired=S’verifikoi dot këtë dëshmi, sepse ka skaduar.
@@ -82,7 +82,7 @@ certVerified=Kjo dëshmi është verifikuar për përdorimet vijuese:
 devinfo_serialnum=Numër Serie
 devinfo_stat_notloggedin=Jo i Futur
 login_failed=Dështoi në Hyrje
-loadPK11TokenDialog=Zgjidhni një pajisje PKCS#11 për t’u ngarkuar
+loadPK11TokenDialog=Zgjidhni një pajisje PKCS#11 për t'u ngarkuar
 devinfo_hwversion=Version HW
 issuerCertNotFound=Nuk u gjet dëshmi për këtë autoritet dëshmish
 devinfo_fwversion=Version FW
@@ -94,7 +94,7 @@ unable_to_toggle_fips=Nuk arrini të këmbejë mënyrat FIPS për pajisjen e sig
 resetPasswordConfirmationTitle=Ricaktoni Fjalëkalimin e Përgjithshëm
 deleteUserCertImpact=Nëse fshini një nga dëshmitë tuaja vetjake, nuk mund ta përdorni më për identifikimin e vetvetes.
 editTrustCA=Dëshmia "%S" përfaqëson një Autoritet Dëshmish.
-pageInfo_Identity_Verified=Sajti web %S mundëson mirëfilltësim për faqen që po shihni. Identiteti i këtij sajti web është verifikuar nga %S, një autoritet dëshmish të cilit i besoni për këtë qëllim.
+pageInfo_Identity_Verified=Sajti %S mundëson mirëfilltësim për faqen që po shihni. Identiteti i këtij sajti është verifikuar nga %S, një autoritet dëshmish të cilit i besoni për këtë qëllim.
 devinfo_status=Gjendje
 pageInfo_MixedContent=Lidhje Pjesërisht e Shifruar
 pageInfo_Privacy_Mixed1=Pjesë të faqes që po shihni nuk qenë shifruar, para se të transmetoheshin përmes Internetit.
