--- a/es-CL/browser/chrome/browser/browser.properties
+++ b/es-CL/browser/chrome/browser/browser.properties
@@ -158,7 +158,7 @@ identity.identified.verifier = Verificado por: %S
 identity.identified.verified_by_you = Has añadido una excepción de seguridad para este sitio
 identity.identified.state_and_country = %S,%S
 identity.encrypted2=La conexión a este sitio web es segura.
-identity.mixed_display_loaded=La conexión a este sitio web no es completamente segura ya que contiene elementos no encriptados (por ejemplo imágenes).
+identity.broken_loaded=La conexión a este sitio web no es completamente segura ya que contiene elementos no encriptados (por ejemplo imágenes) o la encriptación no es muy segura.
 identity.mixed_active_loaded2=Este sitio web contiene contenido interactivo que no ha sido encriptado (por ejemplo scripts). Otras personas pueden ver o modificar el comportamiento del sitio web.
 identity.unencrypted = Su conexión a este sitio web no está codificada.
 identity.unknown.tooltip = Este sitio web no ha suministrado información de identidad.
