--- a/es-CL/browser/chrome/browser/devtools/webide.properties
+++ b/es-CL/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=No se puede conectar a la app: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=No se puede obtener la lista de complementos: %S
 
+error_appProjectsLoadFailed=No se puede cargar la lista de proyectos. Esto puede ocurrir si usa este perfil con una versión más nueva de Firefox.
+
 addons_stable=estable
 addons_unstable=inestable
 addons_simulator_label=Simulador de Firefox OS %1$S (%2$S)
