More new strings

--- a/es-CL/dom/chrome/dom/dom.properties
+++ b/es-CL/dom/chrome/dom/dom.properties
@@ -143,3 +143,4 @@ KeyNameZoomWarning=El valor "Zoom" para KeyboardEvent.key está obsoleto y será
 KeyNameDeadKeysWarning=Los valores para KeyboardEvent.key que empiezan con "Dead" están obsoletos y serán unidos en simplemente "Dead". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=La importación de nodos XUL a un documento de contenido está obsoleta. Esta funcionalidad será removida pronto.
 XMLDocumentLoadPrincipalMismatch=El uso de document.load está prohibido en documentos que provienen de otra ventana. Solo la ventana en la que ese documento fue creada tiene permiso para llamar .load en ese documento. Preferiblemente, use XMLHttpRequest en su lugar.
+IndexedDBTransactionAbortNavigation=Una transacción de IndexedDB que todavía no había sido completada fue abortada debido a la navegación de la página.
