--- a/es-CL/browser/chrome/browser/devtools/timeline.properties
+++ b/es-CL/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=REGISTROS
 timeline.label.styles=Estilos
 timeline.label.reflow=Reflujo
 timeline.label.paint=Dibujo
+timeline.label.javascript=Javascript
 timeline.label.domevent=Evento DOM
 timeline.label.consoleTime=Consola
 timeline.markerDetailFormat=%1$S (%2$S)
