--- a/es-CL/security/manager/chrome/pippki/pippki.properties
+++ b/es-CL/security/manager/chrome/pippki/pippki.properties
@@ -82,7 +82,7 @@ pageInfo_EncryptionWithBitsAndProtocol=Conexión cifrada (%1$S, claves de %2$S b
 pageInfo_Privacy_Encrypted1=La página que estas viendo fue cifrada antes de ser transmitida por Internet.
 pageInfo_Privacy_Encrypted2=El cifrado hace que sea difícil para personas no autorizadas el ver la infromación que viaja entre computadores. Es por ello muy poco probable que alguien lea esta página mientras viaja por la red.
 pageInfo_MixedContent=Conexión parcialmente cifrada
-pageInfo_Privacy_Mixed1=Hay partes de la página que está viendo que no fueron cifradas antes de transmitirse por internet.
+pageInfo_Privacy_Broken1=Partes de la página que está viendo no fueron cifradas o la encriptación no es fue lo suficientemente fuerte antes de ser transmitidas por internet.
 
 #Cert Viewer
 certDetails=Visor de certificados:
@@ -149,17 +149,17 @@ writeFileUnknownError=Error desconocido
 addExceptionBrandedWarning2=Usted está a punto de anular la forma en que %S identifica este sitio
 addExceptionInvalidHeader=Este sitio intenta identificarse a sí mismo con información no válida.
 addExceptionDomainMismatchShort=Sitio erróneo
-addExceptionDomainMismatchLong=El certificado pertenece a un sitio diferente, lo que podría indicar una suplantación de identidad.
+addExceptionDomainMismatchLong2=El certificado pertenece a un sitio diferente, lo que podría significar que alguien está intentando suplantar este sitio.
 addExceptionExpiredShort=Información obsoleta
-addExceptionExpiredLong=El certificado no es válido actualmente. Es imposible verificar si esta identidad se ha perdido o ha sido robada.
+addExceptionExpiredLong2=El certificado no es válido actualmente. Puede haber sido robado o perdido, y usado por alguien para suplantar este sitio.
 addExceptionUnverifiedOrBadSignatureShort=Identidad desconocida
-addExceptionUnverifiedOrBadSignatureLong=No se confía en el certificado, porque no ha sido verificado por una autoridad reconocida usando una firma segura.
+addExceptionUnverifiedOrBadSignatureLong2=No se confía en este certificado porque no ha sido verificado como emitido por una autoridad reconocida usando una firma segura.
 addExceptionValidShort=Certificado válido
 addExceptionValidLong=Este sitio proporciona identificación válida y verificada. No hay necesidad de añadir una excepción.
 addExceptionCheckingShort=Comprobando información
-addExceptionCheckingLong=Intentando identificar el sitio…
+addExceptionCheckingLong2=Intentando identificar este sitio…
 addExceptionNoCertShort=No hay información disponible
-addExceptionNoCertLong=No es posible obtener el estado de identificación para el sitio dado.
+addExceptionNoCertLong2=No es posible obtener el estado de identificación para este sitio.
 addExceptionConnectionFailed=Conexión fallida
 caCertExistsTitle=Certificado existente
 caCertExistsMessage=El certificado ya existe.
