mail+mobile: foresager => forårsager

--- a/da/mobile/android/chrome/webcompatReporter.properties
+++ b/da/mobile/android/chrome/webcompatReporter.properties
@@ -4,9 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
-webcompat.menu.name=Rapportér problem med et websted
+webcompat.menu.name=Anmeld problem med et websted
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
-webcompat.reportDesktopMode.message=Rapportér problem med et websted?
-webcompat.reportDesktopModeYes.label=Rapporter
+webcompat.reportDesktopMode.message=Anmeld problem med et websted?
+webcompat.reportDesktopModeYes.label=Anmeld
