[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -104,6 +104,8 @@ badContentBlocked.blocked.message=O %S está bloqueando conteúdo nesta página.
 badContentBlocked.notblocked.message=O %S não está bloqueando nenhum conteúdo nesta página.
 
 crashedpluginsMessage.title=O plugin %S travou.
+crashedpluginsMessage.reloadButton.label=Recarregar página
+crashedpluginsMessage.reloadButton.accesskey=R
 crashedpluginsMessage.submitButton.label=Enviar um relatório de travamento
 crashedpluginsMessage.submitButton.accesskey=E
 crashedpluginsMessage.learnMore=Saiba mais…
@@ -415,7 +417,7 @@ syncPromoNotification.addons.description=Você pode acessar seus complementos em
 # This appears in the add-on install complete panel when Sync is set
 # but addons sync is not. %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons-sync-disabled.description=Você pode usar sua conta do %S para sincronizar complementos entre vários dispositivos.
+syncPromoNotification.addons-sync-disabled.description=Você pode usar sua conta %S para sincronizar complementos entre vários dispositivos.
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = O %1$S automaticamente envia alguns dados para a %2$S de forma que possamos aprimorar sua experiência.
@@ -447,6 +449,8 @@ service.toolbarbutton.tooltiptext=Serviços
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Deseja ativar serviços do %1$S para exibição nas barras de ferramentas e painéis do %2$S?
+service.install.ok.label=Ativar serviços
+service.install.ok.accesskey=e
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=Salvar página no %S
@@ -467,6 +471,8 @@ identity.privacyPolicy = Política de privacidade
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = Identificar-se no %S
 identity.chooseIdentity.label = Usar um email existente
+identity.newIdentity.label = Use um email diferente
+identity.newIdentity.accessKey = e
 identity.newIdentity.email.placeholder = Email
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Forneça seu endereço de email para identificar-se em %S
@@ -505,12 +511,16 @@ getUserMedia.shareScreen.label = Compartilhar tela
 getUserMedia.shareApplication.label = Compartilhar aplicativo selecionado
 getUserMedia.shareWindow.label = Compartilhar janela selecionada
 getUserMedia.shareSelectedItems.label = Compartilhar itens selecionados
+getUserMedia.never.label = Nunca compartilhar
+getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Você está compartilhando sua câmera com esta página.
 getUserMedia.sharingMicrophone.message2 = Você está compartilhando seu microfone com esta página.
 getUserMedia.sharingCameraAndMicrophone.message2 = Você está compartilhando sua câmera e seu microfone com esta página.
 getUserMedia.sharingApplication.message = Você está compartilhando um aplicativo com esta página.
 getUserMedia.sharingScreen.message = Você está compartilhando sua tela com esta página.
 getUserMedia.sharingWindow.message = Você está compartilhando uma janela com esta página.
+getUserMedia.continueSharing.label = Continuar compartilhando
+getUserMedia.continueSharing.accesskey = C
 
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
