--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -22,6 +22,7 @@ timeline.panelLabel=Painel da linha do tempo
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=Desempenho da linha de tempo
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
