--- a/pt-BR/browser/chrome/browser/devtools/toolbox.properties
+++ b/pt-BR/browser/chrome/browser/devtools/toolbox.properties
@@ -82,3 +82,4 @@ options.lightTheme.label=Tema claro
 # LOCALIZATION NOTE (toolbox.noContentProcess.message)
 # Used as a message in the alert displayed when trying to open a browser
 # content toolbox and there is no content process running
+toolbox.noContentProcess.message=Nenhum processo de conteúdo em execução.
