[te] update from Pootle (mobile)

--- a/te/browser/chrome/browser/shellservice.properties
+++ b/te/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = మరలా నన్ను అడగవద్దు(D)
 setDefaultBrowserNever.accesskey   = D
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=అప్రమేయ విహారిణి
+setDefaultBrowserMessage=%S ప్రస్తుతం మీఅప్రమేయ విహారిణిగా అమర్చిలేదు.మీరు దానిని మీఅప్రమేయ విహారిణిగా చేద్దామను కుంటున్నారా?
+setDefaultBrowserDontAsk=ఈ పరిశీలన %S ప్రారంభంనందు ఎల్లప్పుడుచేయుము.
 
 desktopBackgroundLeafNameWin=డెస్కుటాప్  Background.bmp
 DesktopBackgroundDownloading=పఠమును భద్రపరుచుచున్నది...
