--- a/te/dom/chrome/security/security.properties
+++ b/te/dom/chrome/security/security.properties
@@ -10,6 +10,7 @@ CrossSiteRequestBlocked=క్రాస్-ఆరిజిన్ అభ్యర
 InvalidSTSHeaders=సైటు అనునది చెల్లని Strict-Transport-Security హెడర్ తెలుపుతోంది.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=సైట్ చెల్లని Public-Key-Pins హెడర్స్ తెలిపినది.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
 InsecurePasswordsPresentOnPage=సంకేతపదం క్షేత్రాలు సురక్షితం కాని  (http://) పేజీ పై ఉన్నాయి.  ఇది భద్రాతా సమస్య అది లాగిన్ క్రెడన్షియల్స్ చోర్యానికి అనుమతించును.
 InsecureFormActionPasswordsPresent=సంకేతపదం క్షేత్రాలు సురక్షితం కాని  (http://) ఫారము చర్యతో ఒక ఫారమునందు వున్నాయి.  ఇది భద్రాతా సమస్య అది లాగిన్ క్రెడన్షియల్స్ చోర్యానికి అనుమతించును.
 InsecurePasswordsPresentOnIframe=సంకేతపదం క్షేత్రాలు సురక్షితం కాని  (http://) iframe పై ఉన్నాయి  ఇది భద్రాతా సమస్య అది లాగిన్ క్రెడన్షియల్స్ చోర్యానికి అనుమతించును.
