--- a/te/browser/chrome/browser/devtools/gclicommands.properties
+++ b/te/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,9 @@ helpDesc=అందుబాటులోని ఆదేశములపై సహ
 # explain the contents of the command help table.
 helpAvailable=అందుబాటులోని ఆదేశములు
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=కన్సోల్ నియంత్రించుటకు ఆదేశములు
