--- a/te/browser/chrome/browser/devtools/timeline.properties
+++ b/te/browser/chrome/browser/devtools/timeline.properties
@@ -39,3 +39,20 @@ timeline.label.styles=శైలిలు
 timeline.label.reflow=రీఫ్లో
 timeline.label.paint=చిత్రణ
 timeline.label.domevent=DOM ఘటన
+timeline.label.consoleTime=కన్సోల్:
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=మొదలు:
